ParsingProfile is now managed and persisted at the LogFileSeriesInfo level.